[gd_scene load_steps=28 format=3 uid="uid://bu6rnyfm7ty4f"]

[ext_resource type="Script" path="res://entities/enemies/crystal_charger/crystal_charger.gd" id="1_e4yym"]
[ext_resource type="Texture2D" uid="uid://d04yr5tah8yit" path="res://art/enemy/cristal_charger/CrystalCharger_a.png" id="1_fqcfr"]
[ext_resource type="Texture2D" uid="uid://c3qfa6wimnp5x" path="res://art/enemy/DeadEnemy_n_no_bg.png" id="3_d727a"]
[ext_resource type="PackedScene" uid="uid://ofl3k6wn1rsu" path="res://ui/health_bar_3d.tscn" id="3_mem8h"]
[ext_resource type="AudioStream" uid="uid://bayx4ot8h0a4r" path="res://sound/charger_attack.wav" id="5_vdo1c"]
[ext_resource type="AudioStream" uid="uid://b5eurefucpt33" path="res://sound/charger_damage.wav" id="6_oabe7"]
[ext_resource type="AudioStream" uid="uid://csgnfcbhlv53e" path="res://sound/charger_death.wav" id="7_82i1j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_blvbo"]
atlas = ExtResource("1_fqcfr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdu25"]
atlas = ExtResource("1_fqcfr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ml6i"]
atlas = ExtResource("1_fqcfr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqs8p"]
atlas = ExtResource("1_fqcfr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqe8y"]
atlas = ExtResource("1_fqcfr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjev8"]
atlas = ExtResource("1_fqcfr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6gwn"]
atlas = ExtResource("1_fqcfr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgose"]
atlas = ExtResource("3_d727a")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it0wq"]
atlas = ExtResource("1_fqcfr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_068rj"]
atlas = ExtResource("1_fqcfr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsh5h"]
atlas = ExtResource("1_fqcfr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud4r8"]
atlas = ExtResource("1_fqcfr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnnaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdu25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ml6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqs8p")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqe8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjev8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6gwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgose")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_it0wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_068rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsh5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud4r8")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_b7ci3"]
size = Vector3(1, 0.7, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kmna"]
bg_color = Color(0.431373, 0, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1xcd"]
bg_color = Color(0, 0.647059, 0.901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awtx7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubgvf"]
bg_color = Color(0.431373, 0, 0.0784314, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_es28j"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_5qs11"]
size = Vector3(15, 1, 2)

[node name="CrystalCharger" type="CharacterBody3D" node_paths=PackedStringArray("enemy_damage_sound", "enemy_attack_sound", "enemy_death_sound")]
collision_layer = 2
collision_mask = 40
script = ExtResource("1_e4yym")
enemy_drop_type = 1
enemy_drop_amount = 30
enemy_drop_chance = 1.0
enemy_damage_sound = NodePath("attack")
enemy_attack_sound = NodePath("damage")
enemy_death_sound = NodePath("death")

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_vnnaf")
animation = &"attack"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_b7ci3")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="ShieldBar3D" parent="SubViewport" instance=ExtResource("3_mem8h")]
theme_override_styles/background = SubResource("StyleBoxFlat_5kmna")
theme_override_styles/fill = SubResource("StyleBoxFlat_d1xcd")

[node name="HealthBar3D" parent="SubViewport" instance=ExtResource("3_mem8h")]
theme_override_styles/background = SubResource("StyleBoxFlat_awtx7")
theme_override_styles/fill = SubResource("StyleBoxFlat_ubgvf")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
billboard = 2
texture_filter = 0
texture = SubResource("ViewportTexture_es28j")

[node name="cc_player_detection" type="Area3D" parent="."]
collision_layer = 16

[node name="cc_detection_collider" type="CollisionShape3D" parent="cc_player_detection"]
shape = SubResource("BoxShape3D_5qs11")

[node name="attack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_vdo1c")
max_distance = 20.0

[node name="damage" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_oabe7")

[node name="death" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_82i1j")
volume_db = 15.0
max_distance = 20.0
